--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         <ul class="nav-links">
             <li><a href="#home">首页</a></li>
             <li><a href="#products">产品特性</a></li>
-            <li><a href="#contact">联系我们</a></li>
+            <li><a href="#contact">联系我们吧</a></li>
         </ul>
     </nav>
 
@@ -331,4 +331,5 @@
         });
     </script>
 </body>
+
 </html>
