--- a/index.html
+++ b/index.html
@@ -242,7 +242,8 @@
                 <div class="product-info">
                     <h3>极速性能</h3>
                     <p>采用最新芯片架构，处理速度提升 200%。</p>
-                    <a href="#" class="btn">了解更多</a>
+    
+                    <a href="detail.html" class="btn">了解更多</a>
                 </div>
             </div>
             <div class="product-card">
